# scoptics-agent

./: .gitignore  pyproject.toml
api/: agent.py  agent_tools.py  main.py  retrieval.py
data/: sample_match_tracking.csv
frontend/: app.js  index.html
infra/: docker-compose.yml  init.sql
infra/postgres-data/: postmaster.pid
infra/postgres-data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
infra/postgres-data/base/16384/: 1247  1249  1259  18361_vm  19335  19335_vm  19338  19340  19342  19344  19649_vm  19659  19659_vm  19666  19728  19732  19737  19738  2579  2606  2608  2608_fsm  2608_vm  2610  2615  2619  2619_fsm  2619_vm  2620  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  (+15 more)
infra/postgres-data/base/16385/: 1249  1259  16704_vm  17678  17678_vm  17681  17683  17685  17687  17992  17992_vm  18002  18002_vm  18009  2608  2608_vm  2619  2619_vm  2673  2674  2696  2840  2841  pg_internal.init
infra/postgres-data/base/5/: 2619  pg_internal.init
infra/postgres-data/global/: 1214  1232  1233  1260  1261  1262  2671  2676  2677  2694  2695  6302  6303  pg_control  pg_internal.init
infra/weaviate-data/: schema.db
ingest/: load_match.py  load_skillcorner_match.py
services/: embedding_processor.py  process_match_events.py
src/scoptics_agent/: schemas.py
src/scoptics_agent/events/: clustering.py  detectors.py
tests/: test_detectors.py
